--- a/package.json
+++ b/package.json
@@ -8,16 +8,8 @@
     "grunt": "~0.4.1",
     "grunt-contrib-jshint": "~0.5.4",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.0"
-  },
-  "yuidoc": {
-    "name": "Hilo",
-    "description": "An ultra-fast JavaScript Framework",
-  	"version": "0.1.0",
-    "options": {
-      "paths": "src/",
-      "outdir": "doc/",
-      "theme": "node_modules/grunt-contrib-yuidoc/node_modules/yuidocjs/themes/simple"
-    }
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-watch": "~0.4.4",
+    "grunt-contrib-copy": "~0.4.1"
   }
 }
