--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.4.4",
-    "grunt-contrib-copy": "~0.4.1"
+    // "grunt-contrib-copy": "~0.4.1"
   }
 }
