--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "hilo",
   "title": "Hilo",
   "description": "An ultra-fast JavaScript Framework",
-  "version": "0.1.0-pre-dev-beta-4",
+  "version": "0.1.0-pre-dev-beta-5",
   "license": "MIT",
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-jshint": "~0.5.4",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-watch": "~0.4.4",
-    // "grunt-contrib-copy": "~0.4.1"
+    "grunt-contrib-watch": "~0.4.4"
   }
 }
