--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hilo",
   "title": "Hilo",
   "description": "A lightning fast client-side JavaScript Framework and library that makes developing awesome websites easy",
-  "version": "0.1.0-pre-dev-beta-9",
+  "version": "0.1.0-pre-dev-beta-10",
   "license": "MIT",
   "author": {
     "name": "Erik Royall",
@@ -14,6 +14,8 @@
     "grunt-contrib-jshint": "~0.5.4",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-watch": "~0.4.4"
+    "grunt-contrib-watch": "~0.4.4",
+    "grunt-contrib-yuidoc": "~0.4.0",
+    "grunt-contrib-jasmine": "~0.4.2"
   }
 }
