--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.4.4",
     "grunt-contrib-yuidoc": "~0.4.0",
-    "grunt-contrib-jasmine": "~0.4.2",
-    "phantomjs" : "1.8.1"
+    "grunt-contrib-jasmine": "~0.4.2"
   }
 }
